# truefan

./: .gitignore  CHANGELOG.md  CLAUDE.md  DESIGN.md  README.md  pyproject.toml
.github/workflows/: ci.yml
netdata/: install.sh  setup.sh  truefan.conf
netdata/child/: truefan.conf
netdata/health.d/: truefan_alerts.conf
netdata/parent/: truefan_alerts.conf
netdata/statsd.d/: truefan.conf
tests/: conftest.py  mocks.py  test_bmc.py  test_calibrate.py  test_config.py  test_control.py  test_daemon.py  test_fans.py  test_main.py  test_metrics.py  test_pidfile.py  test_watchdog.py
tests/commands/: test_check.py  test_init.py  test_logs.py  test_netdata.py  test_recalibrate.py  test_reload.py  test_run.py  test_sensors.py  test_start.py  test_status.py  test_stop.py
tests/sensors/: test_available_backends.py  test_ipmi.py  test_lmsensors.py  test_nvme.py  test_smart.py
truefan/: __init__.py  __main__.py  bmc.py  calibrate.py  config.py  control.py  daemon.py  fans.py  main.py  metrics.py  pidfile.py  watchdog.py
truefan/commands/: __init__.py  check.py  init.py  logs.py  netdata.py  recalibrate.py  reload.py  run.py  sensors.py  start.py  status.py  stop.py
truefan/netdata_configs/health.d/: truefan_alerts.conf
truefan/netdata_configs/statsd.d/: truefan.conf
truefan/sensors/: __init__.py  ipmi.py  lmsensors.py  nvme.py  smart.py
