[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "truefan"
version = "0.1.0"
description = "Fan control daemon for TrueNAS"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "tomlkit>=0.12",
]

[project.scripts]
truefan = "truefan.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-xdist>=3.5",
    "pytest-cov>=4.1",
]

[tool.setuptools.packages.find]
include = ["truefan*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["truefan"]

[tool.coverage.report]
show_missing = true
skip_empty = true
