[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "truefan"
version = "0.1.0"
description = "Fan control daemon for TrueNAS"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
keywords = ["cooling", "daemon", "fan-control", "homelab", "ipmi", "monitoring", "server", "supermicro", "temperature", "thermal", "truenas"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: No Input/Output (Daemon)",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Hardware",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
dependencies = [
    "tomlkit>=0.12",
]

[project.scripts]
truefan = "truefan.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-xdist>=3.5",
    "pytest-cov>=4.1",
]

[tool.setuptools.packages.find]
include = ["truefan*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["truefan"]

[tool.coverage.report]
show_missing = true
skip_empty = true
