[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "truefan"
dynamic = ["version"]
description = "Fan control daemon for TrueNAS SCALE with Netdata metrics"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
keywords = ["cooling", "daemon", "fan-control", "homelab", "ipmi", "monitoring", "server", "supermicro", "temperature", "thermal", "truenas"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: No Input/Output (Daemon)",
    "Intended Audience :: System Administrators",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Hardware",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
dependencies = [
    "tomlkit>=0.12",
]

[project.urls]
Homepage = "https://github.com/zvea/truefan"
Source = "https://github.com/zvea/truefan"
Issues = "https://github.com/zvea/truefan/issues"

[project.scripts]
truefan = "truefan.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-xdist>=3.5",
    "pytest-cov>=4.1",
]

[tool.setuptools.packages.find]
include = ["truefan*"]

[tool.setuptools.package-data]
"truefan.netdata_configs" = ["statsd.d/*.conf", "health.d/*.conf"]

[tool.setuptools_scm]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["truefan"]

[tool.coverage.report]
show_missing = true
skip_empty = true
